save button update